Fixed the alignment of ending h1 anchor tag again as previously some error occured in responsiveness

--- a/styles/style.css
+++ b/styles/style.css
@@ -466,7 +466,7 @@ button:hover {
     font-size: 1.3rem;
     position: relative;
     top: 60px;
-    left: -97px;
+    left: -37px;
 }
 .subtitle {
     color: #8D8D8D;
@@ -615,7 +615,7 @@ button:hover {
         font-size: 1.3rem;
         position: relative;
         top: 36px;
-        left: -87px;
+        left: -97px;
     }
     .subtitle {
         color: #8D8D8D;
